# churn-predictor

./: .gitignore  Dockerfile  README.md  app.py  config.py  model.pkl.sha256  pyproject.toml  train.py
tests/: test_app.py
